frontend/assets/stylesheets/pages/_tickets.scss
.tickets-select-form {

    .tickets-select-form__section {
        background-color: $c-neutral7;
        @include rem((
            margin-bottom: $gs-baseline
        ));
    }

    .tickets-select-form__label {
        position: relative;
        display: inline-block;
        float: left;
        @include rem((
            padding: 36px $gs-gutter*1.5
        ));
    }

    .tickets-select-form__input {
        margin: 0;
    }

    .tickets-select-form__header {
        border-bottom: 1px solid $c-neutral4;
    }

    .tickets-select-form-header__secondary {
        position: relative;
        @include rem((
            padding: $gs-baseline $gs-baseline $gs-baseline 0,
            margin-left: 73px
        ));
    }

    .tickets-select-form__detail {
        @include rem((
            padding: $gs-baseline $gs-baseline $gs-baseline $gs-row-height*2
        ));
        background-color: $c-neutral9;
    }

    .tickets-select-form__leadin {
        @include fs-bodyHeading(2);
    }

    .tickets-select-form__tier-name {
        @include rem((
            padding-bottom: $gs-baseline
        ));

        @include mq(tablet) {
            float: left;
            @include rem((
                line-height: 64px
            ));
        }
    }

    .tickets-select-form__toggle {
        position: absolute;
        top: 0;
        right: 0;
        @include rem((
            width: 100%,
            height: 100%
        ));
    }

    .tickets-select-form__toggle-icon {
        position: absolute;
        @include rem((
            right: 20px,
            top: 40px
        ));
    }

    .tickets-select-form__toggle-icon--open {
        @include rotate(180deg);
    }

    input:checked + .tickets-select-form__tier-name {
        text-decoration: underline;
    }

    &:hover {
        border-color: $c-brandLightBlue;
    }

}

.tickets__payment {
    .payment__flyer {
        float: left;
        @include rem((
            width: 63%,
            padding: $gs-baseline 0,
            border-bottom: 1px solid $c-neutral1,
            margin-bottom: $gs-baseline
        ));
        .payment__flyer-image {
            @include rem((
                padding-right: $gs-gutter
            ));
            float: left;
        }
    }

    .form-secondary-container {
        border: 0;
    }
}

.price-info-container {
    vertical-align: middle;
    display: inline-block;
    width: 28%;

    &.price-info-container--last {
        display: block;
        width: 70%;

        @include mq(tablet) {
            display: inline-block;
        }
    }
}



/* funnel ------------------------------------------------------------------------ */

.funnel {
    width: 100%;
    text-align: center;
    cursor: default;
    position: relative;
    @include rem((
        margin-top: $gs-baseline*4
    ));

    .funnel__rail {
        margin: 0;
        text-align: justify;
        @include fs-headline(2);
    }

    .funnel-stretch {
        width: 100%;
        display: inline-block;
        background-color: $c-neutral6;
        position: relative;
        @include rem((
            top: -32px,
            height: 4px
        ));
        z-index: 1;
    }

    .funnel__step {
        width: auto;
        display: inline-block;
        position: relative;
        z-index: 2;
        @include rem((
            height: 20px,
            width: 20px
        ));

        .funnel__point {
            display: inline-block;
            background-color: $white;
            border: 2px solid $c-neutral6;
            @include rem((
                width: 20px,
                height: 20px
            ));
            @include border-radius(50px);
        }

        &.active .funnel__point {
            background-color: $mem-blue;
            border-color: $mem-blue;
        }

        .funnel__text {
            display: block;
            text-align: center;
            position: absolute;
            @include fs-textsans(2);
            @include rem((
                width: 106px,
                left: 50%,
                margin-left: -53px,
                top: -36px
            ));
        }

        &:first-child .funnel__text {
            text-align: left;
            left: 0;
            margin: 0;
        }

        &:last-child .funnel__text {
            text-align: right;
            left: auto;
            right: 0;
            margin: 0;
        }
    }
}

